beta desing. work in progress

--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/main.css">
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <p>Most <strong>delicious</strong> recipes in the whole <strong>World</strong>!</p>
-    <h2>Links:</h2>
+    <div><h1>Odin Recipes</h1></div>
+    <div class="delicious"><p>Most <strong>delicious</strong> recipes in the whole <strong>World</strong>!</p></div>
+    <div class="links-header"><h2>Links:</h2></div>
+    <div class="lists">
     <ul>
     <li><a href="./recipes/chocolate-cake">Chocolate cake</a></li>
     <li><a href="./recipes/pudding-poke-cake.html">Pudding poke cake</a></li>
     </ul>
-    <em>“Cooking is one of the strongest ceremonies for life. When recipes are put together, the kitchen is a chemical laboratory involving air, fire, water and the earth. This is what gives value to humans and elevates their spiritual qualities. If you take a frozen box and stick it in the microwave, you become connected to the factory.” – Laura Esquivel</em>
+    </div>
+    <div class="citation"><em>“Cooking is one of the strongest ceremonies for life. When recipes are put together, the kitchen is a chemical laboratory involving air, fire, water and the earth. This is what gives value to humans and elevates their spiritual qualities. If you take a frozen box and stick it in the microwave, you become connected to the factory.” – Laura Esquivel</em></div>
   </body>
 </html>
