--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
   </head>
 
   <body>
-    <div><h1>Odin Recipes</h1></div>
-    <div class="delicious"><p>Most <strong>delicious</strong> recipes in the whole <strong>World</strong>!</p></div>
-    <div class="links-header"><h2>Links:</h2></div>
-    <div class="lists">
-    <ul>
-    <li><a href="./recipes/chocolate-cake">Chocolate cake</a></li>
-    <li><a href="./recipes/pudding-poke-cake.html">Pudding poke cake</a></li>
-    </ul>
+    <h1>Odin Recipes</h1>
+    <div class="container">
+      <p>Most <strong>delicious</strong> recipes in the whole <strong>World</strong>!</p>
+      <h2>Links:</h2>
+      <div class="lists">
+      <ul>
+      <li><a href="./recipes/chocolate-cake">Chocolate cake</a></li>
+      <li><a href="./recipes/pudding-poke-cake.html">Pudding poke cake</a></li>
+      </ul>
+      </div>
+      <div class="citation"><em>“Cooking is one of the strongest ceremonies for life. When recipes are put together, the kitchen is a chemical laboratory involving air, fire, water and the earth. This is what gives value to humans and elevates their spiritual qualities. If you take a frozen box and stick it in the microwave, you become connected to the factory.” – Laura Esquivel</em></div>
     </div>
-    <div class="citation"><em>“Cooking is one of the strongest ceremonies for life. When recipes are put together, the kitchen is a chemical laboratory involving air, fire, water and the earth. This is what gives value to humans and elevates their spiritual qualities. If you take a frozen box and stick it in the microwave, you become connected to the factory.” – Laura Esquivel</em></div>
   </body>
 </html>
